ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: api.javiermorales.com
      http:
        paths:
          - path: /persona
            pathType: Prefix
            backend:
              service:
                name: springboot-crud-svc
                port:
                  number: 8080
